deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_NAME}
  namespace: default
spec:
  selector:
    matchLabels:
      run: ${APP_NAME}
  template:
    metadata:
      labels:
        run: ${APP_NAME}
    spec:
      volumes:
        - name: google-cloud-key
          secret:
            secretName: credentials
      containers:
        - image: gcr.io/${GOOGLE_CLOUD_PROJECT}/${APP_NAME}:v${APP_VERSION}
          name: ${APP_NAME}
          volumeMounts:
          - name: google-cloud-key
            mountPath: /var/secrets/google
          ports:
            - containerPort: 8080
              protocol: TCP
