ingress-reserved-ip-and-certificate.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ${APP_NAME}
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ${APP_NAME}
    networking.gke.io/managed-certificates: ${APP_NAME}
spec:
  backend:
    serviceName: ${APP_NAME}
    servicePort: 8080
