ingress-test.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ${APP_NAME}
spec:
  backend:
    serviceName: ${APP_NAME}
    servicePort: 8080
